# polkadot-sdk

./: Cargo.toml
binaries/: config-both-docker.toml
substrate/frame/nfts/src/: common_functions.rs  types.rs
templates/parachain/node/: Cargo.toml  build.rs
templates/parachain/node/src/: command.rs  service.rs
templates/parachain/pallets/xcnft/: Cargo.toml
templates/parachain/pallets/xcnft/src/: benchmarking.rs  file  lib.rs  mock.rs  tests.rs  weights.rs
templates/parachain/pallets/xcnft/src/mock/: parachain.rs  relaychain.rs
templates/parachain/pallets/xcnft/src/tests/: testpara.rs  testrelay.rs
templates/parachain/pallets/xcnft/src/tests/testpara/xcm_config/: mod.rs
templates/parachain/pallets/xcnft/src/tests/testrelay/xcm_config/: barrier.rs  mod.rs
templates/parachain/runtime/: Cargo.toml
templates/parachain/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
templates/parachain/runtime/src/configs/: mod.rs  xcm_config.rs
templates/parachain/runtime/src/weights/: block_weights.rs  extrinsic_weights.rs
templates/parachain_two/node/: Cargo.toml
templates/parachain_two/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
templates/parachain_two/pallets/template/: Cargo.toml
templates/parachain_two/pallets/xcnft/: Cargo.toml  README.md
templates/parachain_two/pallets/xcnft/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs  xmacros.rs
templates/parachain_two/pallets/xcnft/src/mock/: mod.rs  parachain.rs  relaychain.rs
templates/parachain_two/pallets/xcnft/src/tests/: testpara.rs  testrelay.rs
templates/parachain_two/runtime/: Cargo.toml
templates/parachain_two/runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
templates/parachain_two/runtime/src/configs/: mod.rs  xcm_config.rs
templates/parachain_two/runtime/src/weights/: mod.rs  paritydb_weights.rs  rocksdb_weights.rs
