[package]
name = "parachain-template-runtime"
description = "A parachain runtime template built with Substrate and Cumulus, part of Polkadot Sdk."
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }
docify = { workspace = true }

[dependencies]
codec = { features = ["derive"], workspace = true }
hex-literal = { optional = true, workspace = true, default-features = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
smallvec = { workspace = true, default-features = true }
docify = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# Local
pallet-parachain-template = { workspace = true }
pallet-parachain-xcnft = { workspace = true }
pallet-uniques = { workspace = true }
pallet-nfts = { workspace = true }


polkadot-sdk = { workspace = true, default-features = false, features = [
	"pallet-aura",
	"pallet-authorship",
	"pallet-balances",
	"pallet-message-queue",
	"pallet-session",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",

	"pallet-xcm",
	"polkadot-parachain-primitives",
	"polkadot-runtime-common",
	"staging-xcm",
	"staging-xcm-builder",
	"staging-xcm-executor",

	"cumulus-pallet-aura-ext",
	"cumulus-pallet-session-benchmarking",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-primitives-aura",
	"cumulus-primitives-core",
	"cumulus-primitives-storage-weight-reclaim",
	"cumulus-primitives-utility",
	"pallet-collator-selection",
	"parachains-common",
	"staging-parachain-info",

	"runtime",
] }

# Cumulus
cumulus-pallet-parachain-system = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"log/std",
	"pallet-parachain-template/std",
	"polkadot-sdk/std",
	"pallet-parachain-xcnft/std",
	"pallet-session/std",
	"pallet-uniques/std",
	"pallet-nfts/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parachains-common/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
]

runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"hex-literal",
	"pallet-parachain-template/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
	"pallet-parachain-xcnft/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"parachains-common/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"pallet-parachain-template/try-runtime",
	"polkadot-sdk/try-runtime",
	"pallet-parachain-xcnft/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
]

# Enable the metadata hash generation.
#
# This is hidden behind a feature because it increases the compile time.
# The wasm binary needs to be compiled twice, once to fetch the metadata,
# generate the metadata hash and then a second time with the
# `RUNTIME_METADATA_HASH` environment variable set for the `CheckMetadataHash`
# extension.
metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
